--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,10 @@
     owner: root
     group: root
     mode: 0755
-  tags: [configuration, phpstorm, phpstorm-download]
+  tags:
+    - configuration
+    - phpstorm
+    - phpstorm-download
 
 - name: download
   get_url:
@@ -16,7 +19,10 @@
     owner: root
     group: root
     mode: 0644
-  tags: [configuration, phpstorm, phpstorm-download]
+  tags:
+    - configuration
+    - phpstorm
+    - phpstorm-downloads
 
 - name: install
   unarchive:
@@ -24,4 +30,7 @@
     dest: "{{ phpstorm_install_prefix }}"
     creates: "{{ phpstorm_install_prefix }}/phpstorm-{{ phpstorm_version }}"
     copy: false
-  tags: [configuration, phpstorm, phpstorm-install]
+  tags:
+    - configuration
+    - phpstorm
+    - phpstorm-install
