--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 # meta file for phpstorm
 ---
 galaxy_info:
+  role_name: phpstorm
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
   description: Set up PhpStorm
@@ -12,10 +13,12 @@ galaxy_info:
         - precise
         - trusty
         - xenial
+        - bionic
     - name: Debian
       versions:
         - wheezy
         - jessie
+        - stretch
   galaxy_tags:
     - development
     - system
