--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
-# meta file for phpstorm
+# meta file
 ---
 galaxy_info:
+  namespace: oefenweb
   role_name: phpstorm
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
